k8s/spring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-post-test
  namespace: spring-test
  labels:
    app: spring-post-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-post-test
  template:
    metadata:
      name: spring-post-test
      labels:
        app: spring-post-test
    spec:
      containers:
        - name: spring-post-test
          image: rublevgeorgij/local.test:v0.10
      restartPolicy: Always
