k8s/spring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
  namespace: spring-test
spec:
  selector:
    app: spring-post-test
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
